Fix overflow-hidden CSS error

--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* width: 1200px;
-  height: 800px;
-  @apply mx-auto flex-col items-center; */
   @apply bg-zinc-900 text-gray-50;
 }
 
